Add clean Pterodactyl test reset